# immich-watch

./: README.md  pyproject.toml
immich-watch.git/: config  packed-refs
immich-watch.git/objects/pack/: pack-6fcca1c92adc21491b1bf23ca128582457352625.idx  pack-6fcca1c92adc21491b1bf23ca128582457352625.pack  pack-6fcca1c92adc21491b1bf23ca128582457352625.rev
src/immich_watch/: main.py
